# aura

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
aura-cli/: Cargo.toml
aura-cli/src/: main.rs  reader.rs
aura-cli/src/format/: json.rs
aura-cli/src/output/: ansi.rs  cpu.rs  disk.rs  mem.rs  meta.rs  mod.rs  net.rs  value.rs
aura-common/: Cargo.toml
aura-common/src/: archive.rs  consts.rs  double_buffer.rs  error.rs  lib.rs  seqlock.rs  time.rs
aura-common/tests/: archive_tests.rs  aura_common_tests.rs  bytemuck_pod_tests.rs  seqlock_guard_tests.rs  seqlock_tests.rs  time_tests.rs
aura-daemon/: Cargo.toml  build.rs
aura-daemon/benches/: collectors.rs
aura-daemon/src/: heartbeat.rs  lib.rs  main.rs  state.rs
aura-daemon/src/collectors/: cpu.rs  disk.rs  gpu.rs  heap.rs  memory.rs  meta.rs  mod.rs  network.rs  parsing.rs  process.rs
aura-daemon/src/collectors/cpu/: linux.rs  macos.rs  mod.rs
aura-daemon/src/collectors/disk/: linux.rs  macos.rs  mod.rs
aura-daemon/src/collectors/memory/: linux.rs  macos.rs  mod.rs
aura-daemon/src/collectors/network/: linux.rs  macos.rs  mod.rs
aura-daemon/src/platform/: linux.rs  macos.rs  mod.rs
aura-daemon/tests/: collectors_integration.rs  heap_tests.rs  ipc_concurrent.rs  ipc_roundtrip.rs  parsing_tests.rs  platform_trait_tests.rs  process_collector_tests.rs  shm_permission_tests.rs  time_delta_tests.rs
aura-daemon/tests/fixtures/: etc_os_release_sample.txt  proc_diskstats_sample.txt  proc_meminfo_sample.txt  proc_mounts_sample.txt  proc_net_dev_sample.txt  proc_pid_stat_sample.txt  proc_stat_sample.txt  proc_vmstat_sample.txt
deployment/home-manager/: default.nix
deployment/homebrew/: aura-cli.rb  aura-daemon.rb  aura.rb
deployment/macos/: com.aura.daemon.plist
deployment/systemd/: aura-daemon.service
