[workspace]
resolver = "2"
members = [
    "aura-common",
    "aura-daemon",
    "aura-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["AURA Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zapsaang/aura"

[workspace.dependencies]
# Zero-copy serialization
rkyv = { version = "0.7", features = ["archive_le", "strict"] }

# Memory mapping
memmap2 = "0.9"

# Atomic operations
crossbeam-epoch = "0.9"
ahash = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Time (timezone support)
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# NVML (GPU) - Use nvml-wrapper for safer Rust bindings
nvml-wrapper = "0.3"

# CRC32 for checksum
crc32fast = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
