[package]
name = "aura-common"
version.workspace = true
edition.workspace = true

[dependencies]
rkyv = { workspace = true }
memmap2 = { workspace = true }
crossbeam-epoch = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
libc = "0.2"

[dev-dependencies]
rand = "0.8"
