[package]
name = "aura-common"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2 = { workspace = true }
crossbeam-epoch = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
libc = "0.2"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

[dev-dependencies]
rand = "0.8"
