[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[features]
default = []
gpu-nvml = ["dep:nvml-wrapper"]

[dependencies]
aura-common = { path = "../aura-common" }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }
libc = "0.2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
